--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-express",
+  "name": "Arts Fest Program Registration Portal",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
